# aiohttp-graphql-next

./: .gitignore  README.md  pyproject.toml  setup.cfg
aiohttp_graphql/: __init__.py  template_graphiql.html  template_playground.html  template_voyager.html  tools.py
tests/: conftest.py  schemas.py  test_graphene.py  test_graphqlview.py
