[tool.poetry]
name = "aiohttp-graphql"
version = "0.1.0"
description = ""
authors = ["Tiago Requeijo <tiago.requeijo.dev@gmail.com>"]
include = ["aiohttp_graphql/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = {version="3.0.0b0", optional=true}
graphql-relay = "^3.0.0"
aiohttp = "^3.6"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.4.1"
flake8-docstrings = "^1.3"
flake8-comprehensions = "^2.0"
flake8-import-order = "^0.18.0"
flake8-bugbear = "^18.8"
flake8-blind-except = "^0.1.1"
flake8-builtins = "^1.4"
pytest-black = "^0.3.7"
pytest-asyncio = "^0.10.0"

[tool.poetry.extras]
graphene = ["graphene"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
